--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
     </div>
     
-    <script src="app.js?v=11"></script>
+    <script src="app.js?v=ch2d"></script>
 </body>
 </html>
 
